--- a/_config.yml
+++ b/_config.yml
@@ -14,22 +14,19 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: Shao-yu Huang's AI Learning Notes
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: SWE @ Google | AI/ML Inference Learner # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
-url: ""
+url: "https://syhuang22.github.io"
 
 github:
-  username: github_username # change to your GitHub username
-
-twitter:
-  username: twitter_username # change to your Twitter username
+  username: syhuang22 # change to your GitHub username
 
 social:
   # Change to your full name.
