--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Shao-yu Huang's AI Learning Notes
+title: Shao-yu Huang
 
-tagline: SWE @ Google | AI/ML Inference Learner # it will display as the subtitle
+tagline: AI Learning Notes # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
