add math engin to kramdown

--- a/_config.yml
+++ b/_config.yml
@@ -149,16 +149,13 @@ paginate: 10
 # The base URL of your site
 baseurl: ""
 
-kramdown:
-  math_engine: mathjax
-  syntax_highlighter: rouge
-
 # ------------ The following options are not recommended to be modified ------------------
 
 kramdown:
+  math_engine: mathjax
   footnote_backlink: "&#8617;&#xfe0e;"
   syntax_highlighter: rouge
-  syntax_highlighter_opts: # Rouge Options › https://github.com/jneen/rouge#full-options
+  syntax_highlighter_opts:
     css_class: highlight
     # default_lang: console
     span:
